--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,6 @@
-<div class="text-center">
-  <form (ngSubmit)="processForm()">
-    <h3>Please log in</h3>
-
-    Your email:
-    <div>
-      <label>
-        <input type="email" id="email" name="email" class="form-control" placeholder="Your Email" [(ngModel)]="email" required email #emailInput="ngModel">
-      </label>
-      <div class="help is-error" *ngIf="emailInput.invalid && emailInput.dirty">
-        Needs to be a valid email.
-      </div>
-    </div>
-
-    Password:
-    <div>
-      <label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="password" required #passwordInput="ngModel">
-      </label>
-      <div class="help is-error" *ngIf="passwordInput.invalid && passwordInput.dirty">
-        Your password is required.
-      </div>
-    </div>
-    <div >
-      <button type="submit" value="Submit" class="btn btn-primary" [disabled]="emailInput.invalid || password.invalid">Submit</button>
-    </div>
-  </form>
-  <br />
-  Don't have an account? <a href="/create-account">Make one.</a>
-</div>
+<h1 class="text-center">
+  Our Bank LLC.
+</h1>
+<br /><hr /><br />
 
 <router-outlet></router-outlet>
