renamed create-account to create-customer

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -24,7 +24,7 @@
           <button class="btn btn-primary">Sign In</button>
       </div>
       <div class="text-center">
-        <button class="btn btn-secondary mt-3" routerLink="/create-account">Create an account</button>
+        <button class="btn btn-secondary mt-3" routerLink="/create-customer">Create an account</button>
       </div>
       {{message}}
     </form>
